--- a/css/cssV1.css
+++ b/css/cssV1.css
@@ -42,7 +42,7 @@ h2, p {
 
 nav ul {
     display: block;
-    background-color: #759DC2;
+    background-color: #525659;
     width: 100%;
     padding: 0;
     margin: 0;
