--- a/css/flipcard.css
+++ b/css/flipcard.css
@@ -1,3 +1,16 @@
+*, *:before, *:after {
+    box-sizing: border-box;
+    outline: none;
+}
+html {
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 16px;
+    font-smooth: auto;
+    font-weight: 300;
+    line-height: 1.5;
+    color: #444;
+}
+
 code, .card .line-numbers {
     font-family: "Lucida Console", Monaco, monospace;
     font-size: 14px;
